2011-01-24  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSNumberFormatter.m: Fixes for formatter behavior.

2011-01-24  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSDateFormatter.m: Check ICU presence in private function.

2011-01-23  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSDateFormatter.h:
	* Source/NSDateFormatter.m: Redo the calendar code.

2011-01-23  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSDateFormatter.h:
	* Source/NSDateFormatter.m: Add calendar.
	* Source/NSNumberFormatter.m: Compile again.

2011-01-23  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSDateFormatter.m:
	* Source/NSNumberFormatter.m:
	* Source/NSCalendar.m: Remove use of OS_API_VERSION() in .m files.

2011-01-23 15:42  David Chisnall <theraven@gna.org>

	* libs/base/trunk/Source/NSNumberFormatter.m: Some small fixes in
	  NSNumberFormatter. Mostly stop using == to compare C strings.

2011-01-23  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSDateFormatter.m: Initialize UDateFormat before using it.
	* Source/NSCalendar.m: Implement -components:fromDate:.

2011-01-23  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSDateFormatter.m: Implemented a few more methods.

2011-01-22  Stefan Bidigaray <stefanbidi@gmail.com>

	* configure:
	* configure.ac:
	* Headers/Additions/GNUstepBase/config.h.in: Added check for unicode/udat.h.
	* Headers/Foundation/NSDateFormatter.h:
	* Source/NSDateFormatter.m: Implemented a few methods.

2011-01-22  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/NSDateFormatter.h:
	* Source/NSDateFormatter.m: Added stub for 10.4 and above methods.

2011-01-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPathUtilities.m: Add support for GlobalDefaults directory
	* Source/NSUserDefaults.m: Document GlobalDefaults directory
	* Documentation/Base.gsdoc: Document GlobalDefaults directory
	Implement suggestion by David Chisnall.